# HR-Pulse-cloud-IA-Devops

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  shcema.py
backend/app/models/: job_skills.py  user.py
frontend/: Dockerfile
frontend/app/: package-lock.json
frontend/app/app/: globals.css  page.tsx
frontend/app/app/Signup/: page.tsx
frontend/app/app/components/: JobList.tsx  PredictorForm.tsx
frontend/app/app/dashboard/: page.tsx
frontend/app/app/login/: page.tsx
frontend/app/login/: page.jsx
infra/: main.tf
ml/: Clean_data.ipynb  EDA.ipynb  data_clean.csv  piplineML.ipynb  select * from dbo.sql
ml/model/: model_salary_prediction.pkl
tests/: conftest.py  test_api.py  test_ml.py
