[project]
name = "hr-pulse-cloud-ia-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.131.0",
    "pyodbc>=5.3.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "argon2-cffi>=23.1.0",
    "joblib>=1.5.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.3",
    "pytest-mock>=3.15.1",
    "anyio>=4.11.0",
]
